# torrenthunt

./: CLAUDE.md  README.md  README_DESKTOP.md  build.gradle.kts  build_enhanced.py  build_executable.py  build_final.py  build_fixed.py  build_modern.py  build_top100.py  build_v2.py  build_v3.py  desktop_torrent_search.py  desktop_torrent_search_enhanced.py  desktop_torrent_search_final.py  desktop_torrent_search_fixed.py  desktop_torrent_search_modern.py  desktop_torrent_search_top100.py  desktop_torrent_search_v2.py  desktop_torrent_search_v3.py  gradle.properties  requirements_desktop.txt  requirements_desktop_v2.txt  settings.gradle.kts
src/: CMakeLists.txt  MainWindow.cpp  SearchWorker.cpp  TorrentSearchClient.cpp  main.cpp
src/main/kotlin/: Main.kt
src/main/kotlin/data/api/: TorrentApiClient.kt
src/main/kotlin/data/models/: TorrentModels.kt
src/main/kotlin/ui/components/: CategoriesSection.kt  SearchSection.kt  SitesSection.kt  TorrentResultsList.kt
src/main/kotlin/ui/screens/: MainScreen.kt
src/main/kotlin/ui/theme/: Theme.kt
src/main/kotlin/ui/viewmodels/: TorrentViewModel.kt
